--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/server/server.js",
   "scripts": {
     "start": "node src/server/server",
-    "dev": "nodemon src/server/server"
+    "build": "webpack"
   },
   "keywords": [
     "weather",
@@ -18,7 +18,9 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
