--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
     "babel-loader": "^8.0.6",
+    "html-webpack-plugin": "^3.2.0",
     "nodemon": "^2.0.2"
   }
 }
