--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/server/server.js",
   "scripts": {
     "start": "node src/server/server",
-    "build-prod": "webpack --config webpack.prod.js", 
+    "build-prod": "webpack --config webpack.prod.js",
     "build-dev": "webpack --config webpack.dev.js"
   },
   "keywords": [
@@ -18,6 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "@babel/polyfill": "^7.8.3",
+    "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
