--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@babel/preset-env": "^7.8.4",
     "babel-loader": "^8.0.6",
     "html-webpack-plugin": "^3.2.0",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "webpack-dev-server": "^3.10.3"
   }
 }
