--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Travel app that uses US city names and travel date to show days until trip, duration of trip, and pictures from chosen city",
   "main": "src/server/server.js",
   "scripts": {
-    "start": "node src/server/server",
+    "test": "jest",
+    "start": "node src/server/index.js",
     "build-prod": "webpack --config webpack.prod.js",
     "build-dev": "webpack-dev-server --config webpack.dev.js --open"
   },
@@ -21,6 +22,7 @@
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jest": "^25.1.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
