Used CopyPlugin to move skycons.js to dist file during prod mode and deleted dist folder to clear cache from Service Worker

--- a/.env
+++ b/.env
@@ -1,7 +1,11 @@
- DARKSKY_API= https://api.darksky.net/forecast
-DARKSKY_KEY= d642919db3884e09597df98337d26058
+GEONAMES_API=http://api.geonames.org/searchJSON
+GEONAMES_KEY=username=jcbhass
 
-PIXABAY_API= https://pixabay.com/api/?key=
-PIXABAY_KEY= 15202003-ed24c6df5b5db575c48c9bbdd
+
+DARKSKY_API=https://api.darksky.net/forecast
+DARKSKY_KEY=d642919db3884e09597df98337d26058
+
+PIXABAY_API=https://pixabay.com/api/?key=
+PIXABAY_KEY=15202003-ed24c6df5b5db575c48c9bbdd
 
 
