--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@babel/polyfill": "^7.8.3",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
+    "copy-webpack-plugin": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "dotenv-webpack": "^1.7.0",
     "express": "^4.17.1",
     "jest": "^25.1.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
