Creating css grid outline

--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   },
   "keywords": [
     "weather",
-    "zip",
-    "code",
-    "emotions"
+    "city",
+    "picture",
+    "travel"
   ],
   "author": "Jennifer Bynum-Hasselgren",
   "license": "ISC",
