--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest",
     "start": "node src/server/index.js",
     "build-prod": "webpack --config webpack.prod.js",
+    "start-prod": "npm run build-prod && npm start",
     "build-dev": "webpack-dev-server --config webpack.dev.js --open"
   },
   "keywords": [
@@ -18,7 +19,6 @@
   "author": "Jennifer Bynum-Hasselgren",
   "license": "ISC",
   "dependencies": {
-    "@babel/polyfill": "^7.8.3",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "copy-webpack-plugin": "^5.1.1",
